[Update] > Update the swagger info
