# docs/swagger.json
@@ -24,9 +24,9 @@
                 }
             }
         },
-        "/deviceinfo": {
-            "get": {
-                "description": "Get Device Info",
+        "/Notify": {
+            "post": {
+                "description": "Notify",
                 "consumes": [
                     "application/json"
                 ],
@@ -34,9 +34,20 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Get Device Info"
+                    "Notify"
                 ],
-                "summary": "Get Device Info",
+                "summary": "Notify",
+                "parameters": [
+                    {
+                        "description": "payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.Notify"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -63,64 +74,17 @@
                     }
                 }
             }
-        },
-        "/job": {
-            "post": {
-                "description": "Create A Job",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Create A Job"
-                ],
-                "summary": "Create A Job",
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
-        "/job/:id": {
-            "delete": {
-                "description": "Delete A Job",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Delete A Job"
-                ],
-                "summary": "Delete A Job",
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
-        "/result/:id": {
-            "get": {
-                "description": "Get Result",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Get Result"
-                ],
-                "summary": "Get Result",
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
+        }
+    },
+    "definitions": {
+        "request.Notify": {
+            "type": "object",
+            "properties": {
+                "organization": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
                 }
             }
         }
